--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "pg": "~4.5.1",
+    "sequelize": "~3.19.3"
   }
 }
