--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
 {
-  "name": "locate",
-  "version": "0.0.0",
-  "private": true,
+  "name": "simplico",
+  "version": "0.0.2",
+  "description": "Minimalistic GIS App (Mobile First)",
+  "main": "srv/srv.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "bin/tester"
+  },
+  "keywords": [
+    "gis",
+    "openlayers",
+    "ol3"
+  ],
+  "author": "aTeam",
+  "license": "LicenseRef-LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/valango/simplico.git"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "pg": "~4.5.1",
-    "sequelize": "~3.19.3"
+    "body-parser": "~1.13.3",
+    "compression": "^1.5.0",
+    "crypto": "0.0.3",
+    "express": "^4.12.4",
+    "jsonwebtoken": "~5.0.4",
+    "mongoose": "^4.1.2",
+    "optimist": "^0.6.1",
+    "passport": "~0.2.2",
+    "passport-facebook": "~2.0.0",
+    "passport-local": "~1.0.0",
+    "socket.io": "^1.3.5",
+    "underscore": "^1.8.3",
+    "winston": "^1.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-ignore": "^1.2.1",
+    "gulp-jshint": "^1.11.0",
+    "gulp-preprocess": "^1.2.0",
+    "istanbul": "^0.3.18",
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.12.36",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.4.2",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-requirejs": "^0.2.2",
+    "mocha": "^2.2.5",
+    "path": "^0.11.14",
+    "phantomjs": "^1.9.17",
+    "requirejs": "^2.1.18",
+    "should": "^7.0.4"
   }
 }
